Yaml Config files/Ingress/ingress TLS Cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 
  namespace:
spec:
  tls:
  - hosts:
    - <hostName>
    secretName: myapp-secret-tls
  rules:
  - host: <hostName>
    http:
      paths: /analytics
      - backend:
          serviceName: analytics-service
          servicePort: 3000
