Yaml Config files/Ingress/ingress path based.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app
  namespace: 
spec:
  rules:
  - host: <hostName>
    http:
      paths:
      - path: /analytics
        backend:
          serviceName: analytics-service
          servicePort: 3000
      paths:
      - path: /shopping
        backend:
          serviceName: shopping-service
          servicePort: 8080
