Yaml Config files/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 
  namespace:
spec:
  rules:
  - host: <hostName>
    http:
      paths: /analytics
      - backend:
          serviceName: analytics-service
          servicePort: 3000
